--- a/pharma/templates/pharma/purchasetable.html
+++ b/pharma/templates/pharma/purchasetable.html
@@ -87,7 +87,7 @@
         <script src="{% static 'pharma/js/jquery.js' %}"></script>
         <script src="{% static 'pharma/js/bootstrap.min.js' %}"></script>
 
-        <title>All Customer Details</title>
+        <title>All Purchase Details</title>
       </head>
       <body>
         {% if messages %} {% for message in messages %}
