--- a/pharma/templates/pharma/emptable.html
+++ b/pharma/templates/pharma/emptable.html
@@ -84,7 +84,7 @@
     <script src="{% static 'pharma/js/jquery.js' %}"></script>
     <script src="{% static 'pharma/js/bootstrap.min.js' %}"></script>
 
-    <title>All Customer Details</title>
+    <title>All Employee Details</title>
   </head>
   <body>
     {% if messages %} {% for message in messages %}
