--- a/pharma/templates/pharma/dealertable.html
+++ b/pharma/templates/pharma/dealertable.html
@@ -214,18 +214,26 @@
               <th>Phone Number</th>
               <th>Email</th>
             </tr>
-            {% for foo in dealer %}
-            <tr>
-              <td>{{ foo.id }}</td>
-              <td>{{ foo.dname }}</td>
-              <td>{{ foo.address }}</td>
-              <td>{{ foo.phn_no }}</td>
-              <td>{{ foo.email }}</td>
-            </tr>
-            {% endfor %}
-          </table>
+           {% for foo in dealer %}
+<tr>
+    <td class="idlink">
+        {% if user.is_authenticated and user.role == "admin" %}
+            <a href="{% url 'dealerformview' foo.id %}">{{ foo.id }}</a>
+        {% else %}
+            <a href="javascript:void(0);" onclick="alert('This action is allowed only for admin');">{{ foo.id }}</a>
+        {% endif %}
+    </td>
+    <td>{{ foo.dname }}</td>
+    <td>{{ foo.address }}</td>
+    <td>{{ foo.phn_no }}</td>
+    <td>{{ foo.email }}</td>
+</tr>
+{% endfor %}
+
+            </table>
         </div>
-      </div>
+        <footer><h3>Click on a Dealer ID to Update or Delete the record.</h3></footer>
+    </div>
     </div>
     <footer id="contact" class="container-fluid text-center">
       <div class="row">
